<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:padding="@dimen/widget_content_padding_small">

    <LinearLayout
        android:id="@+id/widget_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:contentDescription="@null"
            android:src="@drawable/ic_widget_proximo"
            android:tint="@color/brand_primary" />

        <TextView
            android:id="@+id/widget_title"
            style="@style/Widget.Cebolao.Title.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_weight="1"
            android:text="@string/widget_next_contest_title" />

        <ImageButton
            android:id="@+id/widget_refresh_button"
            android:layout_width="@dimen/widget_refresh_button_size_small"
            android:layout_height="@dimen/widget_refresh_button_size_small"
            android:background="@drawable/widget_icon_button_background"
            android:contentDescription="@string/content_desc_refresh"
            android:padding="@dimen/spacing_small_plus"
            android:scaleType="centerInside"
            android:src="@drawable/ic_refresh"
            android:tint="@color/widget_icon_tint" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/widget_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_header"
        android:layout_marginTop="@dimen/spacing_small_plus">

        <LinearLayout
            android:id="@+id/widget_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_prize"
                style="@style/Widget.Cebolao.Text.Highlight.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_placeholder_dash" />

            <TextView
                android:id="@+id/widget_date"
                style="@style/Widget.Cebolao.Text.Secondary.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxsmall"
                android:text="@string/widget_placeholder_date" />
        </LinearLayout>

        <TextView
            android:id="@+id/widget_loading_text"
            style="@style/Widget.Cebolao.Text.Secondary.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/general_loading"
            android:visibility="gone" />
    </FrameLayout>

</RelativeLayout>
