<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/widget_background" android:padding="@dimen/widget_content_padding">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_vertical" android:orientation="horizontal">

        <ImageView android:layout_width="@dimen/icon_size_medium" android:layout_height="@dimen/icon_size_medium" android:src="@drawable/ic_widget_fixado" android:contentDescription="@null" android:tint="@color/widget_icon_tint" />

        <TextView android:id="@+id/widget_title" style="@style/Widget.Cebolao.Title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginStart="@dimen/spacing_small" android:text="@string/widget_pinned_game_title" />

        <ImageButton
            android:id="@+id/widget_refresh_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_desc_refresh"
            android:padding="6dp"
            android:src="@drawable/ic_refresh"
            android:tint="@color/widget_icon_tint" />
    </LinearLayout>

    <LinearLayout android:id="@+id/widget_numbers_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" android:gravity="center" android:orientation="vertical" android:layout_marginTop="@dimen/spacing_small">
    </LinearLayout>

    <TextView android:id="@+id/widget_loading_text" style="@style/Widget.Cebolao.Text.Secondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" android:text="@string/widget_no_pinned_games" android:visibility="gone"/>

</RelativeLayout>